[package]
name = "MPClient"
version = "0.1.0"
edition = "2024"

[dependencies]
avian3d = { version = "0.3.1", features = ["bevy_diagnostic", "diagnostic_ui"] }
lightyear = { version = "0.25.3", features = ["avian3d", "prediction", "replication", "interpolation"] }
bincode = { version = "2.0.1", features = ["serde"] }
bevy = { version = "0.17.2", features = ["bevy_dev_tools"] }
bevy-inspector-egui = "0.35.0"
serde = { version = "1.0.219", features = ["derive"] }
approx = "0.5.1"

[profile.dev.package."*"]
opt-level = 3

[profile.test.package."*"]
opt-level = 3