[package]
name = "MPClient"
version = "0.1.0"
edition = "2024"

[dependencies]
avian3d = { version = "0.5.0", features = ["bevy_diagnostic", "diagnostic_ui"] }
chrono = "0.4.41"
bincode = { version = "2.0.1", features = ["serde"] }
bevy = { version = "0.18.0", features = ["bevy_dev_tools"] }
bevy-inspector-egui = "0.36.0"
bevy-tokio-tasks = "0.18.0"
tokio = { version = "1.45.0", features = ["rt", "rt-multi-thread", "macros", "net", "sync"] }
futures-lite = "2.6.0"
serde = { version = "1.0.219", features = ["derive"] }
approx = "0.5.1"
rand = "0.9.2"
clap = "4.5.56"

[profile.dev.package."*"]
opt-level = 3

[profile.test.package."*"]
opt-level = 3